--- a/style.css
+++ b/style.css
@@ -1,1 +1,25 @@
-#heading {color: red;}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+*{
+    font-family: 'Poppins', sans-serif;
+}
+
+.header{display: flex; justify-content: space-between; border-bottom: 1px solid #dfdbdb;}
+.logo img{width: 180px;}
+.navbar ul{display: flex; list-style: none;}
+.navbar ul li{padding: 20px;}
+.rescard_container{display: flex;  flex-wrap: wrap; justify-content: center;}
+.rescard{
+    width: 300px;
+    height: auto;
+    margin: 30px;
+}
+.rescard img{
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    overflow: hidden;
+    filter: drop-shadow(rgba(0, 0, 0, 0.1) 0px 2px 8px);
+    height: 220px;
+    object-fit: cover;
+}
